Renamed main package, modified they way files are read and written in